--- a/LUA/about-me.html
+++ b/LUA/about-me.html
@@ -174,7 +174,7 @@
       <footer class="info">
         <div class="info-bar">
         <i class="fa fa-copyright copyr"></i><p class="info-h1">Copyrigth Centro Terapéutico y Spa LÚA</p>
-        <p class="info-p">Created By <a href="" class="a-link">Anselmo Zuñiga</a></p>
+        <p class="info-p">Created By <a href="https://anselmozu.netlify.app/" class="a-link">Anselmo Zuñiga</a></p>
       </div>
       </footer>
       <script src="/java/java.js"></script>
