--- a/LUA/serv.html
+++ b/LUA/serv.html
@@ -165,7 +165,7 @@
     </section>
     <footer class="info">
       <div class="info-bar">
-      <i class="fa fa-copyright copyr"></i><p class="info-h1">Copyrigth Centro Terapéutico y Spa LÚA</p>
+      <p class="info-h1">Copyrigth<sup><i class="fa fa-copyright copyr"></i></sup> Centro Terapéutico y Spa LÚA</p>
       <p class="info-p">Created By <a href="https://anselmozu.netlify.app/" class="a-link">Anselmo Zuñiga</a></p>
     </div>
     </footer>
