--- a/LUA/serv.html
+++ b/LUA/serv.html
@@ -156,7 +156,7 @@
         <i class="fa fa-map-marker ubi" aria-hidden="true"></i><p class="map">Ubicación</p>
         <p class="p-ubi">Gorriones, Parque Residencial Coacalco, 55720 San Francisco Coacalco, Méx.</p>
         <i class="fa fa-phone ubi" aria-hidden="true"></i><p class="map">Telefono</p>
-        <p class="p-ubi">(55) 29091396</p>
+        <p class="p-ubi">(55) 1017 - 7649</p>
         <p class="p-redes">Siguenos en Nuestras Redes Sociales.</p>
         <a href="https://www.instagram.com/parquespalua/?fbclid=IwAR0erL0dUgF9AXQf0j860H2NtRNVJEKRull2GWixmRtkvFC9YxOKlg5LT6g"><i class="fa fa-instagram red-insta" aria-hidden="true"></i></a>
           <a href="https://www.facebook.com/institutodeterapiasalternanivasyspalua"><i class="fa fa-facebook-official red-face" aria-hidden="true"></i></a>
