--- a/LUA/index.html
+++ b/LUA/index.html
@@ -138,9 +138,9 @@
        <h1 class="h1-tit">Servicios</h1>
     <div class="quiro">
       <div class="txt-quiro-txt">
-        <h1 class="txt-quiro">Quiropráctica, Reabilitación y Fisioterapia</h1> <br> <p class="p-quiro">Estamos especializados en varios servicios que engloban todo lo que necesita atender la "Quiropractica". 
-          Como puede ser atender el dolor de Hombro, problemas en la Ciatica. Y también otros tratamientos no atendidos por la Quiropractica, 
-          como puede ser, las Conoterapias, Pruebas Covid y tratamientos Pos Covid.</p>
+        <h1 class="txt-quiro">Quiropráctica, Reabilitación y Fisioterapia</h1> <br> <p class="p-quiro">Contamos con muchos servicios dentro de la Quiropráctica, estos nos sirven para llevar una mejor salud, sentirnos bien, y  tener
+          un buen estilo de vida. <br>
+          Somos un centro especializado, agenda una cita y con gusto te atenderemos.</p>
           <a href="serv.html#Quiropractica" class="btn-quiro">Conoce Los Servicios...</a>
       </div>
       <div class="img-quiro">
@@ -152,9 +152,9 @@
       <img src="lua-img/cosmiatria--.jpg" class="img-cosmi">
     </div>
     <div class="txt-cosmi-p">
-      <h1 class="cosm-h1">Cosmiatría Avanzada y Estética Cosmética</h1> <br> <p class="txt-cosmi">Estamos especializados en varios servicios que engloban todo lo que necesita atender la "Quiropractica". 
-        Como puede ser atender el dolor de Hombro, problemas en la Ciatica. Y también otros tratamientos no atendidos por la Quiropractica, 
-        como puede ser, las Conoterapias, Pruebas Covid y tratamientos Pos Covid.</p>
+      <h1 class="cosm-h1">Cosmiatría Avanzada y Estética Cosmética</h1> <br> <p class="txt-cosmi">Dentro de la Cosmiatría contamos con varios servicios, esto nos ayuda a 
+        vernos bien, sentirnos bien, y tener una mejoria en nuestra vida. <br>
+        Somos un centro especializado, agenda una cita y con gusto te atenderemos.</p>
       <a href="serv.html#Cosmiatria" class="btn-quiro">Conoce Los Servicios...</a>
     </div>
   </div>
