--- a/LUA/serv.html
+++ b/LUA/serv.html
@@ -68,8 +68,9 @@
   </header>-->
   <div class="d-qrptc">
     <h1 class="titulo-qrp" id="Quiropractica">Quiropráctica, Reabilitación y Fisioterapia</h1>
-    <p class="desc-qrp">Dentro de la Quiropractica realizamos varios servicios. Todos ellos sirven para mejorar la calidad de vida y evitar futuras molestias con mayor rango a un largo plazo. <br>
-    Atendernos lo mas pronto posible puede salvar vidas.</p>
+    <p class="desc-qrp">Contamos con muchos servicios dentro de la Quiropráctica, estos nos sirven para llevar una mejor salud, sentirnos bien, y  tener
+          un buen estilo de vida. <br>
+      *Agenda una cita*</p>
   </div>
     <div class="qrptc">
         <div class="serv-qrp"><img class="img-serv" src="img-lua/Acupuntura.png" alt=""><h3 class="txt-qrp">Acupuntura</h3>
