--- a/LUA/serv.html
+++ b/LUA/serv.html
@@ -118,8 +118,9 @@
     </div>
     <div class="d-qrptc">
     <h1 class="titulo-qrp" id="Cosmiatria">Cosmiatría Avanzada y Estética Cosmética</h1>
-    <p class="desc-qrp">Dentro de la Quiropractica realizamos varios servicios. Todos ellos sirven para mejorar la calidad de vida y evitar futuras molestias con mayor rango a un largo plazo. <br>
-    Atendernos lo mas pronto posible puede salvar vidas.</p></div>
+    <p class="desc-qrp">Dentro de la Cosmiatría contamos con varios servicios, esto nos ayuda a 
+        vernos bien, sentirnos bien, y tener una mejoria en nuestra vida. <br>
+        *Agenda una cita*</p></div>
     <div class="qrptc">
         <div class="serv-qrp"><img class="img-serv" src="img-lua/Botox.png" alt=""><h3 class="txt-qrp">Botox</h3>
           <a href="https://wa.me/5215510177649?text=Hola. Buen Dia! Quiero agendar una cita para aplicación de Botox." target="_blank"><button class="btn-qrp">¡¡Agenda una Cita!!</button></a></div>
